axum-macros/tests/debug_handler/fail/generics.stderr
error: `#[axum_macros::debug_handler]` doesn't support generic functions
 --> tests/debug_handler/fail/generics.rs:4:17
  |
4 | async fn handler<T>(_extract: T) {}
  |                 ^^^
